i18n + UX: localize availability dates, drop reservation id from breadcrumbs, and guard editing against active reservations